admin pages routing done, needs to be filled up with content (Aron en Marco)

--- a/src/PortfolioCMS/Themes/admin/example html/icons.html
+++ b/src/PortfolioCMS/Themes/admin/example html/icons.html
@@ -12,7 +12,7 @@
 
 
     <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/admin/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Animation library for notifications   -->
     <link href="assets/css/animate.min.css" rel="stylesheet"/>
@@ -48,7 +48,7 @@
 
             <ul class="nav">
                 <li>
-                    <a href="dashboard.html">
+                    <a href="../overzicht.php">
                         <i class="pe-7s-graph"></i>
                         <p>Dashboard</p>
                     </a>
