--- a/src/PortfolioCMS/Themes/admin/example html/template.html
+++ b/src/PortfolioCMS/Themes/admin/example html/template.html
@@ -47,7 +47,7 @@
 
             <ul class="nav">
                 <li class="active">
-                    <a href="dashboard.html">
+                    <a href="../overzicht.php">
                         <i class="pe-7s-graph"></i>
                         <p>Dashboard</p>
                     </a>
