--- a/src/PortfolioCMS/Themes/admin/example html/upgrade.html
+++ b/src/PortfolioCMS/Themes/admin/example html/upgrade.html
@@ -52,7 +52,7 @@
 
             <ul class="nav">
                 <li>
-                    <a href="dashboard.html">
+                    <a href="../overzicht.php">
                         <i class="pe-7s-graph"></i>
                         <p>Dashboard</p>
                     </a>
